--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,17 @@
 body{
     text-align: center;
 }
+
+.links-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.links-container a {
+    margin: 10px;
+    padding: 10px;
+    background-color: #7FFFD4;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
