--- a/styles.css
+++ b/styles.css
@@ -3,22 +3,42 @@
     height: 900px;
     width:  1000px;
     display: inline-block;
+        margin-bottom: 80px; /* Adjust margin to accommodate the banner height */
 }
 
-body{
+
+body {
     text-align: center;
 }
 
-.links-container {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.links-container a {
-    margin: 10px;
+.banner {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #778899;
     padding: 10px;
-    background-color: #7FFFD4;
+    text-align: left; /* Align text to the left */
+}
+
+.banner h2 {
+    margin: 0;
     color: white;
+    display: inline-block; /* Align h2 horizontally with hyperlinks */
+}
+
+.banner a {
+    display: inline-block; /* Align hyperlinks horizontally */
+    margin: 0 10px;
+    padding: 10px;
+    background-color: #fff; /* Adjust link background color */
+    color: #4169E1; /* Adjust link text color */
     text-decoration: none;
     border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.banner a:hover {
+    background-color: #333; /* Adjust link background color on hover */
+    color: #fff; /* Adjust link text color on hover */
 }
