--- a/styles.css
+++ b/styles.css
@@ -85,12 +85,17 @@ body, html {
 /* Blog Posts */
 .blog-posts {
     text-align: center; /* Center the content horizontally */
-    padding: 50px 0; /* Add padding for spacing */
+    padding: 30px 0; /* Add padding for spacing */
 }
 
+.blog-posts h1 {
+    margin: 0; /* Remove default margin */
+    margin-bottom: 30px; /* Add margin at the bottom to create space */
+    color: #354649; /* Change the color of the blog post header */
+}
 .blog-posts h2 {
     margin: 0; /* Remove default margin */
-    margin-bottom: 50px; /* Add margin at the bottom to create space */
+    margin-bottom: 5px; /* Add margin at the bottom to create space */
     color: #354649; /* Change the color of the blog post header */
 }
 
@@ -98,6 +103,8 @@ body, html {
 .blog-post-container,
 .blog-post-container a {
     color: #354649; /* Change the color of the text inside the blog posts and links */
+    margin-top: 1px;
+    margin-bottom: 1px; /* Reduce the margin between distance and date */
 }
 
 /* Blog Post Container */
@@ -121,7 +128,7 @@ body, html {
 /* Change color of links inside the blog post container */
 .blog-post-container a {
     display: inline-block;
-    background-color: #007bff;
+    background-color: #A3C6C4;
     color: #354649; /* Change the color of the links */
     padding: 10px 15px;
     text-decoration: none;
