--- a/styles.css
+++ b/styles.css
@@ -255,12 +255,13 @@ body, html {
 }
 
 .author-image {
-    width: 200px;  /* Fixed width */
-    height: 200px; /* Fixed height */
+    width: 300px;  /* Fixed width */
+    height: 300px; /* Fixed height */
     object-fit: cover; /* Cover the frame without distortion */
     border-radius: 50%; /* Circular image */
     margin: 0 auto; /* Centering the image */
     display: block; /* Block display to handle margins correctly */
+    padding-bottom: 50px; /* Adjust the padding as needed */
 }
 
 /* New styles for author-description */
@@ -282,14 +283,21 @@ body, html {
 /* Introduction photos section */
 .introduction-photos {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center; /* Center items horizontally */
+    align-items: center; /* Center items vertically */
     gap: 20px;
     margin-bottom: 20px;
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
+    padding: 0 20px; /* Adjust horizontal padding */
 }
+
+.introduction-photos img {
+    max-width: 80%; /* Ensure images fill the container */
+    height: auto; /* Maintain aspect ratio */
+    border-radius: 10px; /* Optional: adds rounded corners to your images */
+}
+
+
 
 .author-image {
     max-width: 100%;
@@ -304,7 +312,7 @@ body, html {
     padding: 10px 20px;
     margin-top: 20px;
     background-color: #A3C6C4;
-    color: #fff;
+    color: #354649;
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
