--- a/styles.css
+++ b/styles.css
@@ -47,11 +47,12 @@ body, html {
 
 .top-content h1, .top-content nav a {
     color: #354649;
-    text-shadow: 1px 1px 0 beige, -1px -1px 0 beige, 1px -1px 0 beige, -1px 1px 0 beige;
+    text-shadow: 1px 1px 0 white, -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white;
     text-decoration: none;
 }
 
 .top-content h1 {
+    font-size: 36px; /* Increase this value as needed */
     margin: 8px;
     color: #354649;
 }
@@ -106,7 +107,7 @@ body, html {
     margin: 0;
     color: #354649;
     display: block;
-    text-shadow: 1px 1px 0 beige, -1px -1px 0 beige, 1px -1px 0 beige, -1px 1px 0 beige;
+    text-shadow: 1px 1px 0 white, -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white;
 }
 
 .banner a {
@@ -335,11 +336,21 @@ body, html {
     margin-top: 0; /* Remove top margin */
 }
 
+
+
 .planning-tools a {
     display: block;
     margin-top: 10px;
     text-decoration: none;
     color: #354649; /* or any color you prefer */
+}
+
+.planning-tools .links-container {
+    margin-top: 20px; /* Add space between the "Photo Gallery" link and the "Planning Tools" header */
+}
+
+.planning-tools a:first-of-type {
+    margin-bottom: 20px; /* Add space below the "Photo Gallery" link */
 }
 
 .planning-tools a:hover {
@@ -364,4 +375,71 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.gallery {
+    padding: 10px;
+    text-align: center;
+    background-color: #f4f4f4;
+    padding-bottom: 100px;
+}
+
+.gallery h2 {
+    color: #354649;
+    margin-bottom: 20px;
+}
+
+.large-image-viewer {
+    margin-bottom: 20px;
+    max-width: 100%;
+    max-height: 500px; /* Adjust this to the max height you want */
+    overflow: hidden;
+    background-color: #ddd; /* Background color for the viewer */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.large-image-viewer img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    border-radius: 10px;
+    object-fit: contain; /* Ensures the image fits within the viewer */
+}
+
+
+.thumbnail-scroll {
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 10px 0;
+}
+
+.gallery-grid {
+    display: inline-flex;
+    gap: 10px;
+}
+
+.gallery-item {
+    flex: 0 0 auto;
+    width: 100px; /* Adjust thumbnail width */
+    height: 100px; /* Adjust thumbnail height */
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.gallery-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.gallery-item img:hover {
+    transform: scale(1.1); /* Slight zoom effect on hover */
 }
