--- a/gallery_style.css
+++ b/gallery_style.css
@@ -28,6 +28,17 @@ body, html {
     width: calc(100% - 5px); /* Adjusted width with 20px buffer on each side */
     margin: 0 auto; /* Center the map container */
 }
+
+.transparent-popup .leaflet-popup-content-wrapper {
+    background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white */
+    border-radius: 10px; /* Optional: Rounded corners */
+    padding: 10px;
+}
+
+.transparent-popup .leaflet-popup-tip {
+    background-color: rgba(255, 255, 255, 0.5); /* Match the transparency of the popup */
+}
+
 .top-banner {
     position: relative;
     width: 100%;
